--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 * {
+    /* reset do css */
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
     font-family: 'Titillium Web', sans-serif;
+}
+
+header {
+    background-image: url(imagens/bg-mobile.png);
+    background-size: cover;
 }
