atualização - posição da logo no header

--- a/style.css
+++ b/style.css
@@ -6,7 +6,13 @@
     font-family: 'Titillium Web', sans-serif;
 }
 
+/* 1rem = 16px */
+
 header {
     background-image: url(imagens/bg-mobile.png);
     background-size: cover;
+    height: 8.375rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
