--- a/style.css
+++ b/style.css
@@ -8,11 +8,30 @@
 
 /* 1rem = 16px */
 
+:root {
+    --gray-800: #1E293B;
+    --gray-600: #475569;
+}
+
 header {
     background-image: url(imagens/bg-mobile.png);
     background-size: cover;
     height: 8.375rem;
+    
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 3.7rem;
 }
+
+main {
+    padding-inline: 1.5rem;
+}
+
+.descricao h1 {
+    color: var(--gray-800);
+    margin-bottom: 1rem;
+    font-size: 1.5625;
+}
+
+/* nome da cor, rgb, rgba, hex, hsl, hwb */
