--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --gray-400: #94A3B8;
     --gray-200: #E2E8F0;
     --purple: #7C3AED;
+    --white: #fff;
 }
 
 header {
@@ -90,5 +91,18 @@ main {
 
 .login a:hover {
     text-decoration: underline;
+}
+
+.login button {
+    margin-top: 1rem;
+    padding-block: 1rem;
+    width: 100%;
+    background: var(--purple);
+    border: none;
+    border-radius: 0.25rem;
+
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--white);
 }
 /* nome da cor, rgb, rgba, hex, hsl, hwb */
