--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --gray-400: #94A3B8;
     --gray-200: #E2E8F0;
     --purple: #7C3AED;
+    --light-purple: #9F67FF;
     --white: #fff;
 }
 
@@ -107,6 +108,12 @@ main {
     color: var(--white);
 }
 
+.login button:hover {
+    background: var(--light-purple);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 .login > p {
     color: var(--gray-600);
 }
@@ -145,11 +152,23 @@ main {
 
     .conteudo {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     
     .bg-desktop {
         display: block;
         width: 100%;
     }
+
+    .descricao h1 {
+        font-size: 2.25rem;
+    }
+
+    .descricao p {
+        font-size: 1rem;
+    }
+
 }
 /* nome da cor, rgb, rgba, hex, hsl, hwb */
